--- a/src/main/java/vistas/FrmReporteAsistencia.form
+++ b/src/main/java/vistas/FrmReporteAsistencia.form
@@ -1076,7 +1076,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="SansSerif" size="15" style="1"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Reporte general"/>
+                        <Property name="text" type="java.lang.String" value="Imprimir reporte"/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImprimirDetalleActionPerformed"/>
