--- a/src/main/java/vistas/dialogos/DlgEmpleadoCRUD.form
+++ b/src/main/java/vistas/dialogos/DlgEmpleadoCRUD.form
@@ -29,7 +29,7 @@
               <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
-          <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jTabbedPane1" alignment="0" pref="851" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
