Sin probar aun...

--- a/src/main/java/vistas/mantenimientos/CRUDTipoPermiso.form
+++ b/src/main/java/vistas/mantenimientos/CRUDTipoPermiso.form
@@ -116,10 +116,11 @@
             <Component class="javax.swing.JComboBox" name="cboTipo">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
+                  <StringArray count="4">
                     <StringItem index="0" value="PERMISO"/>
                     <StringItem index="1" value="LICENCIA"/>
                     <StringItem index="2" value="COMISION DE SERVICIOS"/>
+                    <StringItem index="3" value="SUSPENCION"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -142,9 +143,10 @@
             <Component class="javax.swing.JComboBox" name="cboCuenta">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
+                  <StringArray count="3">
                     <StringItem index="0" value="CON GOCE"/>
                     <StringItem index="1" value="SIN GOCE"/>
+                    <StringItem index="2" value="CTA DE VACACIONES"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -864,8 +866,8 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
             <Property name="columns" type="int" value="0"/>
-            <Property name="rows" type="int" value="1"/>
             <Property name="horizontalGap" type="int" value="10"/>
+            <Property name="rows" type="int" value="1"/>
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JButton" name="btnGuardar">
@@ -914,8 +916,8 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
             <Property name="columns" type="int" value="0"/>
-            <Property name="rows" type="int" value="1"/>
             <Property name="horizontalGap" type="int" value="10"/>
+            <Property name="rows" type="int" value="1"/>
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JButton" name="btnNuevo">
