--- a/src/main/java/vistas/FrmReporteAsistencia.form
+++ b/src/main/java/vistas/FrmReporteAsistencia.form
@@ -112,7 +112,6 @@
               <SubComponents>
                 <Component class="com.toedter.calendar.JDateChooser" name="dcFechaInicio">
                   <Properties>
-                    <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="SansSerif" size="14" style="0"/>
                     </Property>
@@ -128,7 +127,6 @@
                 </Component>
                 <Component class="com.toedter.calendar.JDateChooser" name="dcFechaFin">
                   <Properties>
-                    <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="SansSerif" size="14" style="0"/>
                     </Property>
@@ -202,7 +200,7 @@
                   <Font name="SansSerif" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="8">
+                  <StringArray count="9">
                     <StringItem index="0" value="TODO"/>
                     <StringItem index="1" value="ASISTENCIA REGULAR"/>
                     <StringItem index="2" value="MINUTOS EXTRA AUTORIZADOS"/>
@@ -211,6 +209,7 @@
                     <StringItem index="5" value="PERMISOS CON GOCE"/>
                     <StringItem index="6" value="PERMISOS SIN GOCE"/>
                     <StringItem index="7" value="VACACIONES"/>
+                    <StringItem index="8" value="SUSPENCIONES"/>
                   </StringArray>
                 </Property>
               </Properties>
